# NewbornEmbodiedTuringTest

./: .buildinfo  .gitignore  404.html  LICENSE  MANIFEST.in  Parsing.md  README.md  genindex.html  index.html  mac_requirements.txt  mkdocs.yml  newbornembodied_0131_V1.docx  nohup.out  objects.inv  py-modindex.html  pyproject.toml  requirements-old.txt  requirements.txt  requirements_new.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/1gettingstarted/: index.doctree
.doctrees/2documentation/: NETT.doctree  body.doctree  brain.doctree  environment.doctree  index.doctree
.doctrees/3papers/: Parsing.doctree  ViewInvariant.doctree  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  lint.yml  publish-to-test-pypi.yml  run.yml
1gettingstarted/: index.html
2documentation/: NETT.html  body.html  brain.html  environment.html  index.html
3papers/: Parsing.html  ViewInvariant.html  index.html
Analysis/: NETT_test_viz.R  NETT_train_viz.R  README.md  run.py
Analysis/Tools/: NETT_merge_csvs.R  format_real_chicks.py  performance_analysis.py  tsne.py  tsne_with_variance.py
Analysis/organized/viewpoint_chicks_new/: fork_front_Agent1_Fixed_Performance.csv  fork_front_Agent1_Training_Performance.csv  fork_front_Agent2_Fixed_Performance.csv  fork_front_Agent2_Training_Performance.csv  fork_front_Agent3_Fixed_Performance.csv  fork_front_Agent3_Training_Performance.csv  fork_front_Agent4_Fixed_Performance.csv  fork_front_Agent5_Fixed_Performance.csv  fork_front_Agent5_Training_Performance.csv  fork_front_Agent6_Fixed_Performance.csv  fork_front_Agent6_Training_Performance.csv  fork_side_Agent1_Fixed_Performance.csv  fork_side_Agent1_Training_Performance.csv  fork_side_Agent2_Fixed_Performance.csv  fork_side_Agent2_Training_Performance.csv  fork_side_Agent3_Fixed_Performance.csv  fork_side_Agent3_Training_Performance.csv  fork_side_Agent4_Fixed_Performance.csv  fork_side_Agent4_Training_Performance.csv  fork_side_Agent5_Fixed_Performance.csv  fork_side_Agent5_Training_Performance.csv  fork_side_Agent6_Fixed_Performance.csv  fork_side_Agent6_Training_Performance.csv  ship_front_Agent1_Fixed_Performance.csv  ship_front_Agent1_Training_Performance.csv  (+20 more)
Code/ChickAI/: agent.py  chickai_wrapper.py  requirements.txt  run.py  wrapper.py  wrapper_explore.py
Env/: rearing_chamber.x86_64
Env/rearing_chamber_Data/: RuntimeInitializeOnLoads.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0
Parsing/: index.html
Scripts/: README.md  hyper_search.sh  requirements.txt
Scripts/Simulation/: README.md
Scripts/configs/: hydra.yaml  main.yaml
Simulation/: README.md  agent.py  chickai_wrapper.py  logger.py  requirements.txt  run.py  run_parsing_exp.py  run_viewpoint_exp.py  utils.py
Simulation/callback/: supervised_save_bestmodel_callback.py
Simulation/conf/: config.yaml  config_parsing.yaml
Simulation/configs/: engine_settings.yaml  hydra.yaml  main.yaml  mlagents.yaml
Simulation/env_wrapper/: chickai_env_wrapper.py  parsing_env_wrapper.py  viewpoint_env_wrapper.py
Simulation/networks/: resnet18.py
Unity/: README.md
Unity/Assets/: Capsule.prefab  Constant.cs  VideoController.cs
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
ViewInvariant/: index.html
_sources/2documentation/: environment.rst.txt
_sources/3papers/: ViewInvariant.md.txt
data/source/: conf.py  index.rst
docs/: Parsing.md  ViewInvariant.md  environment.yml  generate_mkgendocs.py  index.md  mac_requirements.txt  mkgendocs.yml  newbornembodied_0131_V1.docx  requirements.txt
docs/api_docs/: base_agent.md  base_experiment.md  chickai_env_wrapper.md  dvs_wrapper.md  icm.md  index.md  logger.md  parsing_env_wrapper.md  supervised_agent.md  supervised_save_bestmodel_callback.md  unsupervised_agent.md  viewpoint_env_wrapper.md
docs/dev/: developer-notes.md
docs/source/: conf.py  index.rst
examples/configs/: nett_config_max.yaml  nett_config_min.yaml
examples/notebooks/: Getting Started.ipynb
examples/run/: run.py
experiments/: biomotion.py  parsing.py  parsing_builds_test.py
notebooks/: Custom Encoder.ipynb  Custom Rewards.ipynb  Getting Started.ipynb  LSTM encoder.ipynb
scripts/: parsing_sup.sh  publish.sh  viewpoint_sup.sh
search/: search_index.json
src/: run.py
src/analysis/: README.md  run.py
src/configuration/: binding.yaml
src/experiments/: biomotion.py  parsing.py
src/nett/: __init__.py  _version.py  fast.py  fast2.py  nett.py  version.py
src/netts/: __init__.py  nett.py
src/scripts/: publish.sh
src/simulation/: agent.py  icm_agent.py  run_identityandview_exp.py  run_parsing_exp.py  run_parsing_icm.py  run_viewpoint_exp.py  utils.py
src/wrapper/: dvs_wrapper.py
test_videos/: ParsingEnv.meta.json
tests/: __init__.py  main.py  test.py  test_env.py  test_icm.py
tests/test_videos/: ViewpointEnv.meta.json
videos/: .requirements.txt.swp  make_video.py  requirements.txt  run_video.sh
(+1538 files in other folders)
