[build-system]
requires = ["setuptools<=65.5.0", "pip<=21"]
build-backend = "setuptools.build_meta"

[project]
name = "nett-benchmarks"
dynamic = ["version"]
authors = [
  { name="Bhargav Desai", email="desabh@iu.edu" },
  { name="Zachary Laborde", email="zlaborde@iu.edu" },
  { name="Manju Garimella", email="mchivuku@iu.edu" },
]
description = "A testbed for comparing the learning abilities of newborn animals and autonomous artificial agents."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.10.12"
dependencies = [
    "mlagents==1.0.0",
    "stable-baselines3[extra]==1.8.0",
    "sb3-contrib==1.8.0",
    "torchvision",
    "timm",
    "lightning==2.2.5",
    "lightning-bolts==0.7.0",
    "scikit-learn==1.5.0",
    "rllte-core",
    "gymnasium<=0.26.1",
    "termcolor",
    "scipy>= 1.7.0",
    "pynvml==11.5.0",
    "matplotlib==3.6.0",
    "seaborn==0.12.2",
    "huggingface_hub==0.14.1"
]
keywords = ["nett","netts","newborn","embodied","turing test","benchmark","benchmarking","learning","animals","autonomous","artificial","agents","reinforcement","neuroml","AI","ML","machine learning","artificial intelligence"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: R",
  "Environment :: GPU :: NVIDIA CUDA"
]

[project.optional-dependencies]
notebook = ["ipywidgets"]

[project.urls]
"Homepage" = "https://github.com/buildingamind/NewbornEmbodiedTuringTest"
"Bug Tracker" = "https://github.com/buildingamind/NewbornEmbodiedTuringTest/issues"
"Documentation" = "https://buildingamind.github.io/NewbornEmbodiedTuringTest/index.html"

[tool.setuptools.dynamic]
version = { attr = "nett.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

